--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.1"
 
 services:
   bff:
@@ -9,6 +9,8 @@ services:
       - 8090:8080
     volumes:
       - ./book.sqlite:/book.sqlite
+    networks:
+      - bibliyomani
 
   ui:
     container_name: bibliyomani-ui
@@ -18,3 +20,9 @@ services:
       - 8091:80
     depends_on:
       - bff
+    networks:
+      - bibliyomani
+
+networks:
+  bibliyomani:
+    name: bibliyomani
