--- a/pom.xml
+++ b/pom.xml
@@ -64,17 +64,16 @@
             <version>3.30.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.gwenn</groupId>
+            <artifactId>sqlite-dialect</artifactId>
+            <version>0.1.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.6.10.Final</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.gwenn</groupId>
-            <artifactId>sqlite-dialect</artifactId>
-            <version>0.1.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
@@ -110,12 +109,12 @@
                         </image>
                     </from>
                     <to>
-                        <image>bibliyomani-standalone-bff</image>
+                        <image>bibliyomani-standalone-bff:20032023</image>
                     </to>
                     <container>
                         <ports>8080</ports>
                         <mainClass>com.bibliyomani.standalone.bff.BibliyomaniBffApplication</mainClass>
-                   </container>
+                    </container>
                 </configuration>
             </plugin>
         </plugins>
